Updated repositories and finished invitationLink API doc
