# routes/api/invitation.php
@@ -1,4 +1,5 @@
 <?php
+
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -7,6 +8,7 @@ use Illuminate\Support\Facades\Route;
 |--------------------------------------------------------------------------
 |
 */
+
 Route::group(["middleware" => "auth:api"], function () {
     Route::group(["middleware" => ["role:admin"]], function () {
         Route::get("invitations", "API\InvitationLinkController@index")->middleware("permission:read-invitation");
@@ -14,5 +16,7 @@ Route::group(["middleware" => "auth:api"], function () {
         Route::get("invitations/{id}", "API\InvitationLinkController@show")->middleware("permission:read-invitation");
 
         Route::post("invitations", "API\InvitationLinkController@store")->middleware("permission:create-invitation");
+
+        Route::delete("invitations/{id}", "API\InvitationLinkController@destroy")->middleware("permission:delete-invitation");
     });
 });
